# swagger.yaml
@@ -418,11 +418,13 @@ paths:
         - in: query
           name: logs_type
           type: string
-          enum: ["host", "controller", "all"]
+          enum: ["host", "controller", "all", ""]
+          required: false
         - in: query
           name: host_id
           type: string
           format: uuid
+          required: false
       responses:
         200:
           description: Success.
@@ -1342,7 +1344,7 @@ paths:
           description: The file to upload.
           x-mimetype: application/zip
         - in: query
-          name: type
+          name: logs_type
           type: string
           enum: ['host', 'controller']
           required: true
@@ -1391,7 +1393,7 @@ paths:
           format: uuid
           required: true
         - in: query
-          name: type
+          name: logs_type
           type: string
           enum: ['host', 'controller', 'all']
           required: true
@@ -1400,114 +1402,6 @@ paths:
           type: string
           format: uuid
           required: false
-      responses:
-        200:
-          description: Success.
-          schema:
-            type: file
-        401:
-          description: Unauthorized.
-          schema:
-            $ref: '#/definitions/infra_error'
-        403:
-          description: Forbidden.
-          schema:
-            $ref: '#/definitions/infra_error'
-        404:
-          description: Error.
-          schema:
-            $ref: '#/definitions/error'
-        405:
-          description: Method Not Allowed.
-          schema:
-            $ref: '#/definitions/error'
-        409:
-          description: Error.
-          schema:
-            $ref: '#/definitions/error'
-        500:
-          description: Error.
-          schema:
-            $ref: '#/definitions/error'
-
-  /clusters/{cluster_id}/hosts/{host_id}/logs:
-    post:
-      tags:
-        - installer
-      security:
-        - agentAuth: []
-      summary: Agent API to upload logs.
-      operationId: UploadHostLogs
-      consumes:
-        - multipart/form-data
-      parameters:
-        - in: path
-          name: cluster_id
-          type: string
-          format: uuid
-          required: true
-        - in: path
-          name: host_id
-          type: string
-          format: uuid
-          required: true
-        - in: formData
-          name: upfile
-          type: file
-          required: false
-        - in: header
-          name: discovery_agent_version
-          type: string
-          required: false
-          # TODO return after fix in go-swagger and moving to 0.25 or o.26
-          # https://github.com/go-swagger/go-swagger/issues/2362
-          # maxLength: 20971520  #20MB
-          description: The file to upload.
-          x-mimetype: application/zip
-      responses:
-        204:
-          description: Success.
-        401:
-          description: Unauthorized.
-          schema:
-            $ref: '#/definitions/infra_error'
-        403:
-          description: Forbidden.
-          schema:
-            $ref: '#/definitions/infra_error'
-        404:
-          description: Error.
-          schema:
-            $ref: '#/definitions/error'
-        500:
-          description: Error.
-          schema:
-            $ref: '#/definitions/error'
-        503:
-          description: Unavailable.
-          schema:
-            $ref: '#/definitions/error'
-
-    get:
-      tags:
-        - installer
-      summary: Download host logs
-      security:
-        - userAuth: []
-      operationId: DownloadHostLogs
-      produces:
-        - application/octet-stream
-      parameters:
-        - in: path
-          name: cluster_id
-          type: string
-          format: uuid
-          required: true
-        - in: path
-          name: host_id
-          type: string
-          format: uuid
-          required: true
       responses:
         200:
           description: Success.
